--- a/HoF.CombatSim/Views/Character.xaml
+++ b/HoF.CombatSim/Views/Character.xaml
@@ -3,15 +3,36 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:local="clr-namespace:HoF.CombatSim.Views"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <i:Interaction.Triggers>
+        <prism:InteractionRequestTrigger SourceObject="{Binding NotificationRequest}">
+            <prism:PopupWindowAction IsModal="True" CenterOverAssociatedObject="True" />
+        </prism:InteractionRequestTrigger>
+        <prism:InteractionRequestTrigger SourceObject="{Binding SelectCharacterRequest}">
+            <prism:PopupWindowAction IsModal="True" CenterOverAssociatedObject="True">
+                <prism:PopupWindowAction.WindowStyle>
+                    <Style TargetType="Window">
+                        <Setter Property="SizeToContent" Value="WidthAndHeight"/>
+                        <Setter Property="ResizeMode" Value="NoResize"/>
+                        <Setter Property="WindowStyle" Value="ToolWindow"/>
+                    </Style>
+                </prism:PopupWindowAction.WindowStyle>
+                <prism:PopupWindowAction.WindowContent>
+                    <local:CharacterSelection />
+                </prism:PopupWindowAction.WindowContent>
+            </prism:PopupWindowAction>
+        </prism:InteractionRequestTrigger>
+
+    </i:Interaction.Triggers>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition Width="30"></ColumnDefinition>
+            <ColumnDefinition Width="47"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="25"></RowDefinition>
@@ -22,10 +43,32 @@
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" VerticalAlignment="Center">Name</TextBlock>
-        <TextBox Grid.Row="1" Text="{Binding Name}"></TextBox>
+        <TextBox Grid.Row="1" Text="{Binding Character.Name}"></TextBox>
         <TextBlock Grid.Row="2" VerticalAlignment="Center">Allies</TextBlock>
-        <ListBox Grid.Row="3" ItemsSource="{Binding Allies}"></ListBox>
+        <ListBox Grid.Row="3" ItemsSource="{Binding Character.Allies}" SelectedItem="{Binding SelectedAlly}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}"></TextBlock>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <StackPanel Grid.Row="3" Grid.Column="1">
+            <Button Command="{Binding AddAllyCommand}">Add</Button>
+            <Button Command="{Binding RemoveAllyCommand}" CommandParameter="{Binding SelectedAlly}">Remove</Button>
+            <Button>Paste</Button>
+        </StackPanel>
         <TextBlock Grid.Row="4" VerticalAlignment="Center">Enemies</TextBlock>
-        <ListBox Grid.Row="5" ItemsSource="{Binding Enemies}"></ListBox>
+        <ListBox Grid.Row="5" ItemsSource="{Binding Character.Enemies}" SelectedItem="{Binding SelectedEnemy}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}"></TextBlock>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <StackPanel Grid.Row="5" Grid.Column="1">
+            <Button Command="{Binding AddEnemyCommand}">Add</Button>
+            <Button Command="{Binding RemoveEnemyCommand}" CommandParameter="{Binding SelectedEnemy}">Remove</Button>
+            <Button>Paste</Button>
+        </StackPanel>
     </Grid>
 </UserControl>
